--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,7 +26,6 @@
 
 .character-pic {
     width: 35%;
-    height: auto;
 }
 
 .char-text-row {
@@ -40,4 +39,9 @@
     background-color: #578395;
     color: white;
     text-align: center;
+    align-items: center;
+}
+
+.yourChar {
+    align-items: center;
 }
